Fixing filter stickness on mobile devices

--- a/src/pages/Products/UI/ProductFilter/ProductsFilter.css
+++ b/src/pages/Products/UI/ProductFilter/ProductsFilter.css
@@ -117,6 +117,10 @@
 @media (max-width: 800px) {
   .products-filter-container {
     width: 100%;
+    position: static !important; /* <-- принудительно */
+    top: auto !important;       /* <-- сбрасываем отступ */
+    max-height: none;
+    overflow-y: visible;
   }
 
   .filter-container {
